--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "axios": "0.21.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-scripts": "5.0.0-next.31+749a76d2"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
