--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "axios": "0.21.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-scripts": "5.0.0-next.31+749a76d2"
+    "react-scripts": "4.0.0"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
